# county

./: .gitignore  .pre-commit-config.yaml  README.md  add_results.py  outputs.py  pyproject.toml  requirements.txt  setup.py
src/county/: __init__.py  create_competitions.py  create_schema.py  update_matches.py  utils.py
