[project]
name = "county"
version = "0.1.0"
description = "Python package to create and maintain a database of clubs, teams, competitions, results and more for Camogie / LGFA / GAA competitions within a County"
authors = [{ name = "bamacgabhann", email = "127785144+breandan.macgabhann@users.noreply.github.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "geoalchemy2>=0.17.1",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pre-commit>=4.2.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/county"]

[tool.hatch.build.targets.wheel]
include = ["src/county"]

[tool.hatch.build.targets.wheel.sources]
"src/county" = "county"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
